@@ -108,7 +108,7 @@
 | <a href="../../../../toc1.html">Modules</a>
 | <a href="../../../../toc2.html">Applications</a>
  ] <hr>
-<h1 class="title">debug(n) 1 tcllib &quot;debug narrative&quot;</h1>
+<h1 class="title">debug(n) 1.0.2 tcllib &quot;debug narrative&quot;</h1>
 <div id="name" class="section"><h2><a name="name">Name</a></h2>
 <p>debug - debug narrative - core</p>
 </div>
@@ -128,7 +128,7 @@
 <div class="synopsis">
 <ul class="requirements">
 <li>package require <b class="pkgname">Tcl 8.5</b></li>
-<li>package require <b class="pkgname">debug <span class="opt">?1?</span></b></li>
+<li>package require <b class="pkgname">debug <span class="opt">?1.0.2?</span></b></li>
 </ul>
 <ul class="syntax">
 <li><a href="#1"><b class="cmd">debug.<b class="variable">tag</b></b> <i class="arg">message</i> <span class="opt">?<i class="arg">level</i>?</span></a></li>
