@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[vset PACKAGE_VERSION 1.0.1]
+[vset PACKAGE_VERSION 1.0.2]
 [manpage_begin debug n [vset PACKAGE_VERSION]]
 [keywords debug]
 [keywords log]
